# confls

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml  remove.fish  start.fish
spec/: environment.md  general.md  shared.md
src/: aur.rs  cli.rs  data.rs  environment.rs  errors.rs  main.rs  session.rs  utils.rs
src/cli/: log.rs  mod.rs
src/environment/: mod.rs  structs.rs
