[package]
name = "confls"
description = "CMD utility to create, restore and swap configuration files easily."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.4"
chrono = "0.4.24"
clap = { version = "4.2.5", features = ["derive"] }
confy = "0.5.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
sha256 = "1.1.3"
tokio = { version = "1.28.0", features = ["full"] }
